INTYG-7389: Ändrat efter CR

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygHeader/wcIntygHeader.directive.html
@@ -31,7 +31,7 @@
 
         <!-- Status -->
         <div class="page-header-divider">
-          <div class="inline-block" wc-authority="NAVIGERING" intygstyp="{{intygHeaderViewState.intygType}}" ng-if="::backState">
+          <div class="inline-block" wc-authority="NAVIGERING" intygstyp="{{::intygHeaderViewState.intygType}}" ng-if="::backState">
             <a ng-click="back()"
                uib-popover="Tillbaka."
 
