--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.directive.html
@@ -1,7 +1,17 @@
 <div class="{{::config.cssClass}}">
   <div class="row" ng-repeat="row in ::config.components">
     <div class="col-xs-{{getColSize(row, $index)}}" ng-repeat="col in row">
-      <ue-dynamic-component config="::col" model="::model" form="::form"></ue-dynamic-component>
+      <ue-validation-wrapper validations="validation.messagesByField[config.validationContext.key.toLowerCase()]">
+        <ue-dynamic-component config="::col" model="::model" form="::form"></ue-dynamic-component>
+      </ue-validation-wrapper>
     </div>
+  </div>
+  <div ng-repeat="cvk in validationKeys">
+    <ue-validation-list
+        class="ng-animate-disabled"
+        field-type="{{cvk.type}}"
+        warnings="validation.warningMessagesByField[cvk.key]"
+        validations="validation.messagesByField[cvk.key]">
+    </ue-validation-list>
   </div>
 </div>
