INTYG-7803: Ändrar från bind-html till bind-html-compile för att se till att komponenter indragna blir kompilerade

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusModal.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygStatus/wcIntygStatusSlot/wcIntygStatusModal.template.html
@@ -3,7 +3,7 @@
   <h3>{{header}}</h3>
 </div>
 <wc-bottom-fadeout>
-  <div class="modal-body" ng-bind-html="body">
+  <div class="modal-body" bind-html-compile="body">
   </div>
 </wc-bottom-fadeout>
 <div class="modal-footer">
