INTYG-6637: Felmeddelanden utbrutna på flertalet ue-komponenter

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.directive.html
@@ -5,13 +5,27 @@
         <ue-dynamic-component config="::col" model="::model" form="::form"></ue-dynamic-component>
       </ue-validation-wrapper>
     </div>
+
+    <div class="col-xs-12" ng-if="useRowValidation">
+      <div ng-if="useRowValidation" ng-repeat="cvk in getRowValidationKeys(row, $index)">
+        <ue-validation-list
+            class="ng-animate-disabled"
+            field-type="{{cvk.type}}"
+            warnings="validation.warningMessagesByField[cvk.key]"
+            validations="validation.messagesByField[cvk.key]">
+        </ue-validation-list>
+      </div>
+    </div>
   </div>
-  <div ng-repeat="cvk in validationKeys">
-    <ue-validation-list
-        class="ng-animate-disabled"
-        field-type="{{cvk.type}}"
-        warnings="validation.warningMessagesByField[cvk.key]"
-        validations="validation.messagesByField[cvk.key]">
-    </ue-validation-list>
+
+  <div ng-if="!useRowValidation">
+    <div ng-repeat="cvk in validationKeys">
+      <ue-validation-list
+          class="ng-animate-disabled"
+          field-type="{{cvk.type}}"
+          warnings="validation.warningMessagesByField[cvk.key]"
+          validations="validation.messagesByField[cvk.key]">
+      </ue-validation-list>
+    </div>
   </div>
 </div>
