--- a/skl/ag7804/src/main/resources/META-INF/resources/webjars/ag7804/minaintyg/js/directives/ag7804.SelectableFieldList.directive.html
+++ b/skl/ag7804/src/main/resources/META-INF/resources/webjars/ag7804/minaintyg/js/directives/ag7804.SelectableFieldList.directive.html
@@ -64,7 +64,7 @@
   <selectable-category-wrapper
       category-label="KAT_2.RBK"
       cert-model="cert"
-      field-configs="[fieldConfig.sysselsattningMandatory, fieldConfig.sysselsattningOptional]"
+      field-configs="[fieldConfig.sysselsattning]"
       summary="summary">
 
 
@@ -72,11 +72,11 @@
     <div selectable-field-wrapper
          label-key="FRG_28.RBK"
          cert-model="cert"
-         field-config="fieldConfig.sysselsattningOptional"
+         field-config="fieldConfig.sysselsattning"
          summary="summary"
          show-deselected="showDeselected">
-      <ul id="sysselsattningOptional">
-        <li ng-repeat="sys in cert.sysselsattning" ng-if="['NUVARANDE_ARBETE'].indexOf(sys.typ) === -1">
+      <ul id="sysselsattning">
+        <li ng-repeat="sys in cert.sysselsattning">
           <span dynamic-label key="KV_FKMU_0002.{{sys.typ}}.RBK"></span>
         </li>
       </ul>
@@ -86,27 +86,28 @@
     <div selectable-field-wrapper
          label-key="FRG_29.RBK"
          cert-model="cert"
-         field-config="fieldConfig.sysselsattningMandatory"
+         field-config="fieldConfig.sysselsattning"
          summary="summary"
          show-deselected="showDeselected">
-      <div id="sysselsattningMandatory" class="multiline" ng-repeat="sys in cert.sysselsattning"
+      <div id="sysselsattning-nuvarandeArbete" class="multiline" ng-repeat="sys in cert.sysselsattning"
            ng-if="['NUVARANDE_ARBETE'].indexOf(sys.typ) > -1">{{cert.nuvarandeArbete}}</div>
     </div>
   </selectable-category-wrapper>
 
-  <!-- Diagnos -->
+  <!-- Diagnoser -->
   <selectable-category-wrapper category-label="KAT_3.RBK"
                                cert-model="cert"
-                               field-configs="[fieldConfig.diagnoser]"
+                               field-configs="[fieldConfig.diagnosGrupp]"
                                summary="summary">
     <div selectable-field-wrapper
-         label-key="FRG_6.RBK"
+         label-key="FRG_100.RBK"
          cert-model="cert"
-         field-config="fieldConfig.diagnoser"
+         field-config="fieldConfig.diagnosGrupp"
          summary="summary"
          show-deselected="showDeselected">
+      <div id="onskarFormedlaDiagnos" class="inline-single-value">{{cert.onskarFormedlaDiagnos | uvBoolFilter}}</div>
 
-
+      <h4><span dynamic-label key="FRG_6.RBK"></span></h4>
       <div class="row">
         <div class="col-xs-12">
           <table class="table table-striped">
@@ -114,33 +115,35 @@
               <th><span dynamic-label key="DFR_6.2.RBK"></span></th>
               <th></th>
             </tr>
-          <tr ng-repeat="diagnos in cert.diagnoser track by $index">
-            <td ng-attr-id="diagnosKod{{$index}}"> {{diagnos.diagnosKod}}</td>
-            <td ng-attr-id="diagnosBeskrivning{{$index}}">{{diagnos.diagnosBeskrivning}}</td>
-          </tr>
+            <tr ng-repeat="diagnos in cert.diagnoser track by $index">
+              <td ng-attr-id="diagnosKod{{$index}}"> {{diagnos.diagnosKod}}</td>
+              <td ng-attr-id="diagnosBeskrivning{{$index}}">{{diagnos.diagnosBeskrivning}}</td>
+            </tr>
           </table>
         </div>
       </div>
-
-
-
     </div>
+
   </selectable-category-wrapper>
 
   <!-- Sjukdomens konsekvenser -->
   <selectable-category-wrapper category-label="KAT_4.RBK"
                                cert-model="cert"
-                               field-configs="[fieldConfig.funktionsnedsattning, fieldConfig.aktivitetsbegransning]"
+                               field-configs="[fieldConfig.funktionsnedsattningGrupp, fieldConfig.aktivitetsbegransning]"
                                summary="summary">
     <div selectable-field-wrapper
-         label-key="FRG_35.RBK"
-         sub-label-key="DFR_35.1.RBK"
+         label-key="FRG_101.RBK"
          cert-model="cert"
-         field-config="fieldConfig.funktionsnedsattning"
+         field-config="fieldConfig.funktionsnedsattningGrupp"
          summary="summary"
          show-deselected="showDeselected">
+      <div id="onskarFormedlaFunktionsnedsattning" class="inline-single-value">{{cert.onskarFormedlaFunktionsnedsattning | uvBoolFilter}}</div>
+
+      <h3><span dynamic-label key="FRG_35.RBK"></span></h3>
+      <h4><span dynamic-label key="DFR_35.1.RBK"></span></h4>
       <div id="funktionsnedsattning" class="multiline">{{cert.funktionsnedsattning}}</div>
     </div>
+
     <div selectable-field-wrapper
          label-key="FRG_17.RBK"
          sub-label-key="DFR_17.1.RBK"
@@ -310,10 +313,10 @@
            summary="summary"
            show-deselected="showDeselected">
          <span ng-show="cert.kontaktMedAg">
-            <span id="kontaktFk-yes" dynamic-label key="ag7804.label.yes"></span>
+            <span id="kontaktAg-yes" dynamic-label key="ag7804.label.yes"></span>
           </span>
       <span ng-show="!cert.kontaktMedAg">
-         <span id="kontaktFk-no" dynamic-label key="ag7804.label.no"></span>
+         <span id="kontaktAg-no" dynamic-label key="ag7804.label.no"></span>
       </span>
     </div>
 
@@ -328,25 +331,5 @@
     </div>
   </selectable-category-wrapper>
 
-
-
-  <selectable-category-wrapper category-label="KAT_9999.RBK"
-                               cert-model="cert"
-                               field-configs="[fieldConfig.tillaggsfragor]"
-                               summary="summary">
-    <div ng-repeat="tillaggsfraga in cert.tillaggsfragor">
-      <div selectable-field-wrapper
-           label-key="DFR_{{tillaggsfraga.id}}.1.RBK"
-           cert-model="cert"
-           field-config="fieldConfig.tillaggsfragor"
-           field-id="tillaggsfraga.id"
-           summary="summary"
-           show-deselected="showDeselected">
-        <div id="tillaggsfraga_{{$index}}" class="multiline">{{tillaggsfraga.svar}}</div>
-      </div>
-    </div>
-
-
-  </selectable-category-wrapper>
 
 </div>
