INTYG-7055: Dölj asterisker om utkastet är låst

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -17,7 +17,7 @@
       </div>
     </div>
 
-    <form name="certForm" novalidate autocomplete="off" wc-auto-save="editEnabled" class="ng-animate-disabled">
+    <form name="certForm" class="cert-form" novalidate autocomplete="off" wc-auto-save="editEnabled" class="ng-animate-disabled">
       <fieldset ng-disabled="!editEnabled">
         <div ng-hide="viewState.common.error.activeErrorMessageKey || viewState.common.deleted">
 
