INTYG-7877: Inför IKA-007 beteende för orsaksfält i makuleradialogen så som max 3500 tkn mm. (Gäller samtliga intygstyper, inte bara AG7804)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
@@ -36,6 +36,9 @@
             </label>
             <textarea id="clarification-{{reason.value}}"
                       rows="3"
+                      maxlength="3500"
+                      ue-filter-latin1
+                      auto-expand
                       class="form-control"
                       ng-model="model.makuleraModel.clarification[reason.value]">
             </textarea>
