--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -1,29 +1,27 @@
 <div ui-view="header"></div>
-<div class="webcert-workarea-hflex-container centered-constrained-content" id="view-{{viewState.common.intygProperties.type}}" ng-show="!viewState.common.activeErrorMessageKey">
-
-  <div class="bottom-fadeout-gradient wc-color-27">
-    <div></div>
-  </div>
-
-  <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid">
-    <div class="{{viewState.common.intygProperties.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
-      <wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading">
-
-        <div id="certificate" ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="intyg-body">
-                <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
+<div class="webcert-workarea-wrapper">
+  <div class="webcert-workarea-hflex-container centered-constrained-content" id="view-{{viewState.common.intygProperties.type}}" ng-show="!viewState.common.activeErrorMessageKey">
+    <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid">
+      <div class="{{viewState.common.intygProperties.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
+        <wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading">
+          <div id="certificate" ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="intyg-body">
+                  <uv-render-components config="uvConfig" view-data="cert"></uv-render-components>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </wc-spinner><!-- entire intyg -->
-    </div><!--  spinner end -->
-  </div>
+        </wc-spinner><!-- entire intyg -->
+      </div><!--  spinner end -->
 
-  <div class="webcert-workarea-supportpanel" ng-if="::supportPanelConfig">
-    <wc-support-panel-manager config="supportPanelConfig"></wc-support-panel-manager>
-  </div>
+      <div class="bottom-fadeout-gradient bottom-fadeout-gradient-main wc-color-27">
+        <div></div>
+      </div>
+    </div>
 
+    <wc-support-panel-manager ng-if="::supportPanelConfig" config="supportPanelConfig"></wc-support-panel-manager>
+
+  </div>
 </div>
