--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.directive.html
@@ -1,21 +1,24 @@
 <div class="{{::config.cssClass}}">
   <div class="row" ng-repeat="row in ::config.components">
-    <div class="col-xs-{{getColSize(row, $index)}}" ng-repeat="col in row">
-      <ue-validation-wrapper validations="validation.messagesByField[config.validationContext.key.toLowerCase()]">
-        <ue-dynamic-component config="::col" model="::model" form="::form"></ue-dynamic-component>
-      </ue-validation-wrapper>
-    </div>
-
-    <div class="col-xs-12" ng-if="useRowValidation">
-      <div ng-if="useRowValidation" ng-repeat="cvk in getRowValidationKeys(row, $index)">
-        <ue-validation-list
-            class="ng-animate-disabled"
-            field-type="{{cvk.type}}"
-            warnings="validation.warningMessagesByField[cvk.key]"
-            validations="validation.messagesByField[cvk.key]">
-        </ue-validation-list>
+    <ue-validation-wrapper validations="getFirstRowValidations(config.modelProp && $index === config.firstRequiredRow)">
+      <div class="col-xs-{{getColSize(row, $index)}}" ng-repeat="col in row">
+        <ue-validation-wrapper validations="validation.messagesByField[config.validationContext.key.toLowerCase()]">
+          <ue-dynamic-component config="::col" model="::model" form="::form"></ue-dynamic-component>
+        </ue-validation-wrapper>
       </div>
-    </div>
+
+      <div class="col-xs-12" ng-if="useRowValidation">
+        <div ng-if="useRowValidation" ng-repeat="cvk in getRowValidationKeys($parent.$index, $index)">
+          <ue-validation-list
+              class="ng-animate-disabled"
+              field-type="{{cvk.type}}"
+              warnings="validation.warningMessagesByField[cvk.key]"
+              validations="validation.messagesByField[cvk.key]"
+              ng-key="{{cvk.key}}">
+          </ue-validation-list>
+        </div>
+      </div>
+    </ue-validation-wrapper>
   </div>
 
   <div ng-if="!useRowValidation">
@@ -28,4 +31,6 @@
       </ue-validation-list>
     </div>
   </div>
+
+  <ue-validation-list field-type="{{config.type}}" validations="validation.messagesByField[config.modelProp.toLowerCase()]" ></ue-validation-list>
 </div>
