INTYG-6965: Döljer högerpanel på borttagna utkast

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -56,7 +56,7 @@
   </div>
 
 
-  <wc-support-panel-manager ng-if="::supportPanelConfig" config="supportPanelConfig"></wc-support-panel-manager>
+  <wc-support-panel-manager ng-hide="viewState.common.deleted" ng-if="::supportPanelConfig" config="supportPanelConfig"></wc-support-panel-manager>
 
 </div>
 </div>
