INTYG-7931: Fixade trasig intyg/utkast-header i IE11

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -1,5 +1,5 @@
 <!-- Utkastheader -->
-<div ui-view="header"></div>
+<div ui-view="header" class="webcert-workarea-intyg-header"></div>
 
 <div class="webcert-workarea-wrapper">
 
