INTYG-7699: Justeringar i MI anpassa intyg steg 2 - alla delfrågerubriker i högerfältet för AG1-14, AG7804, lisjp.

--- a/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/js/directives/lisjp.SelectableFieldList.directive.html
+++ b/fk/lisjp/src/main/resources/META-INF/resources/webjars/lisjp/minaintyg/js/directives/lisjp.SelectableFieldList.directive.html
@@ -134,20 +134,20 @@
                                summary="summary">
     <div selectable-field-wrapper
          label-key="FRG_35.RBK"
-         sub-label-key="DFR_35.1.RBK"
          cert-model="cert"
          field-config="fieldConfig.funktionsnedsattning"
          summary="summary"
          show-deselected="showDeselected">
+      <h4><span dynamic-label key="DFR_35.1.RBK"></span></h4>
       <div id="funktionsnedsattning" class="multiline">{{cert.funktionsnedsattning}}</div>
     </div>
     <div selectable-field-wrapper
          label-key="FRG_17.RBK"
-         sub-label-key="DFR_17.1.RBK"
          cert-model="cert"
          field-config="fieldConfig.aktivitetsbegransning"
          summary="summary"
          show-deselected="showDeselected">
+      <h4><span dynamic-label key="DFR_17.1.RBK"></span></h4>
       <div id="aktivitetsbegransning" class="multiline">{{cert.aktivitetsbegransning}}</div>
     </div>
   </selectable-category-wrapper>
@@ -159,20 +159,20 @@
                                summary="summary">
     <div selectable-field-wrapper
          label-key="FRG_19.RBK"
-         sub-label-key="DFR_19.1.RBK"
          cert-model="cert"
          field-config="fieldConfig.pagaendeBehandling"
          summary="summary"
          show-deselected="showDeselected">
+      <h4><span dynamic-label key="DFR_19.1.RBK"></span></h4>
       <div id="pagaendeBehandling" class="multiline">{{cert.pagaendeBehandling}}</div>
     </div>
     <div selectable-field-wrapper
          label-key="FRG_20.RBK"
-         sub-label-key="DFR_20.1.RBK"
          cert-model="cert"
          field-config="fieldConfig.planeradBehandling"
          summary="summary"
          show-deselected="showDeselected">
+      <h4><span dynamic-label key="DFR_20.1.RBK"></span></h4>
       <div id="planeradBehandling" class="multiline">{{cert.planeradBehandling}}</div>
     </div>
   </selectable-category-wrapper>
@@ -304,11 +304,11 @@
                                summary="summary">
       <div selectable-field-wrapper
            label-key="FRG_26.RBK"
-           sub-label-key="DFR_26.1.RBK"
            cert-model="cert"
            field-config="fieldConfig.kontaktMedFk"
            summary="summary"
            show-deselected="showDeselected">
+         <h4><span dynamic-label key="DFR_26.1.RBK"></span></h4>
          <span ng-show="cert.kontaktMedFk">
             <span id="kontaktFk-yes" dynamic-label key="lisjp.label.yes"></span>
           </span>
@@ -319,11 +319,11 @@
 
     <div selectable-field-wrapper
          label-key="FRG_26.RBK"
-         sub-label-key="DFR_26.2.RBK"
          cert-model="cert"
          field-config="fieldConfig.anledningTillKontakt"
          summary="summary"
          show-deselected="showDeselected">
+      <h4><span dynamic-label key="DFR_26.2.RBK"></span></h4>
       <div id="anledningtillkontakt" class="multiline">{{cert.anledningTillKontakt}}</div>
     </div>
   </selectable-category-wrapper>
