--- a/skl/ag7804/src/main/resources/META-INF/resources/webjars/ag7804/minaintyg/js/directives/ag7804.SelectableFieldList.directive.html
+++ b/skl/ag7804/src/main/resources/META-INF/resources/webjars/ag7804/minaintyg/js/directives/ag7804.SelectableFieldList.directive.html
@@ -1,62 +1,62 @@
 <div class="selectable-field-list">
   <!-- Smittbärarpenning-->
-    <selectable-category-wrapper
-        category-label="KAT_10.RBK"
-        cert-model="cert"
-        field-configs="[fieldConfig.avstangningSmittskydd]"
-        summary="summary">
-      <div selectable-field-wrapper
-           label-key="FRG_27.RBK"
-           cert-model="cert"
-           field-config="fieldConfig.avstangningSmittskydd"
-           summary="summary"
-           show-deselected="showDeselected">
+  <selectable-category-wrapper
+      category-label="KAT_10.RBK"
+      cert-model="cert"
+      field-configs="[fieldConfig.avstangningSmittskydd]"
+      summary="summary">
+    <div selectable-field-wrapper
+         label-key="FRG_27.RBK"
+         cert-model="cert"
+         field-config="fieldConfig.avstangningSmittskydd"
+         summary="summary"
+         show-deselected="showDeselected">
                     <span ng-show="cert.avstangningSmittskydd">
                       <span id="avstangningsmittskydd-yes" dynamic-label key="ag7804.label.yes"></span>
                     </span>
-        <span ng-show="!cert.avstangningSmittskydd">
+      <span ng-show="!cert.avstangningSmittskydd">
                       <span id="avstangningsmittskydd-no" dynamic-label key="ag7804.label.no"></span>
                     </span>
-      </div>
-    </selectable-category-wrapper>
+    </div>
+  </selectable-category-wrapper>
 
   <!-- Grund för medicinskt underlag -->
   <selectable-category-wrapper
-        category-label="KAT_1.RBK"
-        cert-model="cert"
-        field-configs="[fieldConfig.grund]"
-        summary="summary">
+      category-label="KAT_1.RBK"
+      cert-model="cert"
+      field-configs="[fieldConfig.grund]"
+      summary="summary">
     <div selectable-field-wrapper
          label-key="FRG_1.RBK"
          cert-model="cert"
          field-config="fieldConfig.grund"
          summary="summary"
          show-deselected="showDeselected">
-        <div ng-show="cert.undersokningAvPatienten!=null">
-          <div id="undersokningAvPatienten" class="inline-single-value">
-            <h4><span dynamic-label key="KV_FKMU_0001.UNDERSOKNING.RBK"></span></h4><span>  {{cert.undersokningAvPatienten | date:'shortDate' }}</span>
-          </div>
+      <div ng-show="cert.undersokningAvPatienten!=null">
+        <div id="undersokningAvPatienten" class="inline-single-value">
+          <h4><span dynamic-label key="KV_FKMU_0001.UNDERSOKNING.RBK"></span></h4><span>  {{cert.undersokningAvPatienten | date:'shortDate' }}</span>
         </div>
-        <div ng-show="cert.telefonkontaktMedPatienten !=null">
-          <div id="telefonkontaktMedPatienten" class="inline-single-value">
-            <h4><span dynamic-label key="KV_FKMU_0001.TELEFONKONTAKT.RBK"></span></h4><span>  {{cert.telefonkontaktMedPatienten | date:'shortDate' }}</span>
-          </div>
+      </div>
+      <div ng-show="cert.telefonkontaktMedPatienten !=null">
+        <div id="telefonkontaktMedPatienten" class="inline-single-value">
+          <h4><span dynamic-label key="KV_FKMU_0001.TELEFONKONTAKT.RBK"></span></h4><span>  {{cert.telefonkontaktMedPatienten | date:'shortDate' }}</span>
         </div>
-        <div ng-show="cert.journaluppgifter!=null">
-          <div id="journaluppgifter" class="inline-single-value">
-            <h4><span dynamic-label key="KV_FKMU_0001.JOURNALUPPGIFTER.RBK"></span></h4><span>  {{cert.journaluppgifter | date:'shortDate' }}</span>
-          </div>
+      </div>
+      <div ng-show="cert.journaluppgifter!=null">
+        <div id="journaluppgifter" class="inline-single-value">
+          <h4><span dynamic-label key="KV_FKMU_0001.JOURNALUPPGIFTER.RBK"></span></h4><span>  {{cert.journaluppgifter | date:'shortDate' }}</span>
         </div>
-        <div ng-show="cert.annatGrundForMU!=null">
-          <div id="annatGrundForMU" class="inline-single-value">
-            <h4><span dynamic-label
-                  key="KV_FKMU_0001.ANNAT.RBK"></span></h4><span>{{cert.annatGrundForMU | date:'shortDate' }}</span>
-          </div>
+      </div>
+      <div ng-show="cert.annatGrundForMU!=null">
+        <div id="annatGrundForMU" class="inline-single-value">
+          <h4><span dynamic-label
+                    key="KV_FKMU_0001.ANNAT.RBK"></span></h4><span>{{cert.annatGrundForMU | date:'shortDate' }}</span>
         </div>
-        <h4><span dynamic-label key="DFR_1.3.RBK" ng-show="cert.annatGrundForMUBeskrivning!=null"></span></h4>
-        <div ng-show="cert.annatGrundForMUBeskrivning!=null" class="inline-single-value">
-          {{cert.annatGrundForMUBeskrivning}}
-        </div>
+      </div>
+      <h4><span dynamic-label key="DFR_1.3.RBK" ng-show="cert.annatGrundForMUBeskrivning!=null"></span></h4>
+      <div ng-show="cert.annatGrundForMUBeskrivning!=null" class="inline-single-value">
+        {{cert.annatGrundForMUBeskrivning}}
+      </div>
     </div>
   </selectable-category-wrapper>
 
@@ -68,7 +68,7 @@
       summary="summary">
 
 
-<!-- Extra selection for non-mandatory sysselsattningtypes / description fields-->
+    <!-- Extra selection for non-mandatory sysselsattningtypes / description fields-->
     <div selectable-field-wrapper
          label-key="FRG_28.RBK"
          cert-model="cert"
@@ -138,7 +138,7 @@
          summary="summary"
          show-deselected="showDeselected">
       <div id="onskarFormedlaFunktionsnedsattning" class="inline-single-value">{{cert.onskarFormedlaFunktionsnedsattning | uvBoolFilter}}</div>
-
+      <h4></h4>
       <h3><span dynamic-label key="FRG_35.RBK"></span></h3>
       <h4><span dynamic-label key="DFR_35.1.RBK"></span></h4>
       <div id="funktionsnedsattning" class="multiline">{{cert.funktionsnedsattning}}</div>
@@ -146,12 +146,12 @@
 
     <div selectable-field-wrapper
          label-key="FRG_17.RBK"
-         sub-label-key="DFR_17.1.RBK"
          cert-model="cert"
          field-config="fieldConfig.aktivitetsbegransning"
          summary="summary"
          show-deselected="showDeselected">
-      <div id="aktivitetsbegransning" class="multiline">{{cert.aktivitetsbegransning}}</div>
+      <h4><span dynamic-label key="DFR_17.1.RBK"></span></h4>
+      <div id="aktivitetsbegransning" class="multiline inline-single-value">{{cert.aktivitetsbegransning}}</div>
     </div>
   </selectable-category-wrapper>
 
@@ -162,20 +162,20 @@
                                summary="summary">
     <div selectable-field-wrapper
          label-key="FRG_19.RBK"
-         sub-label-key="DFR_19.1.RBK"
          cert-model="cert"
          field-config="fieldConfig.pagaendeBehandling"
          summary="summary"
          show-deselected="showDeselected">
+      <h4><span dynamic-label key="DFR_19.1.RBK"></span></h4>
       <div id="pagaendeBehandling" class="multiline">{{cert.pagaendeBehandling}}</div>
     </div>
     <div selectable-field-wrapper
          label-key="FRG_20.RBK"
-         sub-label-key="DFR_20.1.RBK"
          cert-model="cert"
          field-config="fieldConfig.planeradBehandling"
          summary="summary"
          show-deselected="showDeselected">
+      <h4><span dynamic-label key="DFR_20.1.RBK"></span></h4>
       <div id="planeradBehandling" class="multiline">{{cert.planeradBehandling}}</div>
     </div>
   </selectable-category-wrapper>
@@ -305,14 +305,14 @@
                                cert-model="cert"
                                field-configs="[fieldConfig.kontaktMedAg, fieldConfig.anledningTillKontakt]"
                                summary="summary">
-      <div selectable-field-wrapper
-           label-key="FRG_103.RBK"
-           sub-label-key="DFR_103.1.RBK"
-           cert-model="cert"
-           field-config="fieldConfig.kontaktMedAg"
-           summary="summary"
-           show-deselected="showDeselected">
-         <span ng-show="cert.kontaktMedAg">
+    <div selectable-field-wrapper
+         label-key="FRG_103.RBK"
+         cert-model="cert"
+         field-config="fieldConfig.kontaktMedAg"
+         summary="summary"
+         show-deselected="showDeselected">
+      <h4><span dynamic-label key="DFR_103.1.RBK"></span></h4>
+      <span ng-show="cert.kontaktMedAg">
             <span id="kontaktAg-yes" dynamic-label key="ag7804.label.yes"></span>
           </span>
       <span ng-show="!cert.kontaktMedAg">
@@ -322,11 +322,11 @@
 
     <div selectable-field-wrapper
          label-key="FRG_103.RBK"
-         sub-label-key="DFR_103.2.RBK"
          cert-model="cert"
          field-config="fieldConfig.anledningTillKontakt"
          summary="summary"
          show-deselected="showDeselected">
+      <h4><span dynamic-label key="DFR_103.2.RBK"></span></h4>
       <div id="anledningtillkontakt" class="multiline">{{cert.anledningTillKontakt}}</div>
     </div>
   </selectable-category-wrapper>
