--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/containers/ueGrid/ueGrid.directive.html
@@ -1,6 +1,6 @@
 <div class="{{::config.cssClass}}">
   <div class="row" ng-repeat="row in ::config.components">
-    <ue-validation-wrapper validations="getFirstRowValidations(config.modelProp && $index === config.firstRequiredRow)">
+    <ue-validation-wrapper validations="getFirstRowValidations($index)">
       <div class="col-xs-{{getColSize(row, $index)}}" ng-repeat="col in row">
         <ue-validation-wrapper validations="validation.messagesByField[config.validationContext.key.toLowerCase()]">
           <ue-dynamic-component config="::col" model="::model" form="::form"></ue-dynamic-component>
