--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsQuestionaire.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsQuestionaire.directive.html
@@ -1,6 +1,6 @@
 <div id="questionaire" class="intyg-block__titlerow ng-scope">
     <section>
-        <div ng-repeat="question in srsViewState.questions">
+        <div ng-repeat="question in srs.questions">
             <div class="srs-question-element">
                 <div>
                     {{question.text}}
@@ -16,7 +16,7 @@
     
         <div class="srs-questions-submit">
             <button type="button" id="showBtn-a8722b69-ae4c-4d28-bdf4-9af526c29a44" class="floatRight btn btn-secondary ng-binding"
-                ng-click="visaClicked()" ng-disabled="!srsViewState.showVisaKnapp"  popover-popup-delay="300" popover-append-to-body="true"
+                ng-click="visaClicked()" ng-disabled="!srs.showVisaKnapp"  popover-popup-delay="300" popover-append-to-body="true"
                 popover-placement="auto top">
                     Visa
             </button>
