--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsResult.directive.html
@@ -1,18 +1,18 @@
 <div id="srsResult{{id}}">
-    <div ng-if="srsViewState.prediktionInfo">
-        <wc-srs-info-box message-string="srsViewState.prediktionInfo"></wc-srs-info-box>
+    <div ng-if="srs.prediktionInfo">
+        <wc-srs-info-box message-string="srs.prediktionInfo"></wc-srs-info-box>
     </div>
-    <div ng-if="srsViewState.prediktionError">
-        <wc-srs-error-box message-string="srsViewState.prediktionError"></wc-srs-error-box>
+    <div ng-if="srs.prediktionError">
+        <wc-srs-error-box message-string="srs.prediktionError"></wc-srs-error-box>
     </div>
-    <wc-alert-message alert-severity="danger" id="predictionBox" ng-if="srsViewState.prediction !== 'error' && srsViewState.prediction.description" class="prediction-box">
-                <img ng-src="{{srsViewState.riskImage}}" alt="">
-        {{srsViewState.prediction.description}}
-        <div 
+    <wc-alert-message alert-severity="danger" id="predictionBox" ng-if="srs.prediction !== 'error' && srs.prediction.description" class="prediction-box">
+                <img ng-src="{{srs.riskImage}}" alt="">
+        {{srs.prediction.description}}
+        <div
         style="float:right"
         class="glyphicon glyphicon-question-sign"
         uib-popover-template="externalRisk.templateUrl" popover-trigger="outsideClick"
-        popover-placement="auto right" popover-append-to-body="false" popover-is-open="srsViewState.status.riskInfoOpen">
+        popover-placement="auto right" popover-append-to-body="false" popover-is-open="srs.status.riskInfoOpen">
       </div>
     </wc-alert-message>
     <ul id="tab{{id}}" class="nav nav-tabs nav-justified">
@@ -21,19 +21,20 @@
     </ul>
     <div class="tab-content">
         <div id="atgarder{{id}}" class="tab-pane fade in active">
-            <br>            
-            <div ng-if="srsViewState.atgarderInfo">
-                <wc-srs-info-box message-string="srsViewState.atgarderInfo"></wc-srs-info-box>
+            <br>
+            <div ng-if="srs.atgarderInfo">
+                <wc-srs-info-box message-string="srs.atgarderInfo"></wc-srs-info-box>
             </div>
-            <div ng-if="srsViewState.atgarderError">
-                <wc-srs-error-box message-string="srsViewState.atgarderError"></wc-srs-error-box>
+            <div ng-if="srs.atgarderError">
+                <wc-srs-error-box message-string="srs.atgarderError"></wc-srs-error-box>
             </div>
-            <div id="atgarderObs" ng-if="status.open && srsViewState.atgarder && srsViewState.atgarder.atgarderObs && parentHasRendered()" clamp="4">{{srsViewState.atgarder.atgarderObs}}</div>
+            <div id="atgarderObs" ng-if="status.open && srs.atgarder && srs.atgarder.atgarderObs && parentHasRendered()" clamp="4">{{srs.atgarder.atgarderObs}}</div>
                 <br><br>
-    
+
             <h3>Rekommenderade åtgärder</h3>
-            <div id="atgarderRek" ng-if="status.open">
-                <div ng-repeat="(key,value) in srsViewState.atgarder.atgarderRek">
+            <!--<div id="atgarderRek" ng-if="status.open">-->
+            <div id="atgarderRek">
+                <div ng-repeat="(key,value) in srs.atgarder.atgarderRek">
                     <div clamp="3" ng-bind-html="'• ' + value"></div>
                     <br>
                 </div>
@@ -45,13 +46,13 @@
         </div>
         <div id="statstics{{id}}" class="tab-pane fade">
             <br>
-            <div ng-if="srsViewState.statistikInfo">
-                <wc-srs-info-box message-string="srsViewState.statistikInfo"></wc-srs-info-box>
+            <div ng-if="srs.statistikInfo">
+                <wc-srs-info-box message-string="srs.statistikInfo"></wc-srs-info-box>
             </div>
-            <div ng-if="srsViewState.statistikError">
-                <wc-srs-error-box message-string="srsViewState.statistikError"></wc-srs-error-box>
+            <div ng-if="srs.statistikError">
+                <wc-srs-error-box message-string="srs.statistikError"></wc-srs-error-box>
             </div>
-            <img ng-show="srsViewState.statistik.statistikBild" ng-src="{{srsViewState.statistik.statistikBild}}" alt=""/>
+            <img ng-show="srs.statistik.statistikBild" ng-src="{{srs.statistik.statistikBild}}" alt=""/>
             <div class="floatRight">
                 <button type="button" class="btn btn-secondary ng-binding" ng-click="redirectToStatistikExternalSite(); logStatistikClicked();">Läs mer</button>
             </div>
