NEW-SRS: Adaptations to re-enable and adapt the new SRS in WebCert (work in progress)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsContent.directive.html
@@ -1,3 +1,4 @@
+<!-- 2019-04-03 CH: THE OLD SRS DIRECTIVE, TO BE REMOVED LATER ON WHEN FULLY MIGRATED (MORE CONSENT ETC) -->
 <div ng-if="status.open">
   <div class="panel-heading panel-srs-info-heading">
     <div class="srs-panel-title">
