--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsHelpDisplay.directive.html
@@ -1,3 +1,4 @@
+<!-- 2019-04-03 CH: THE OLD SRS DIRECTIVE, TO BE REMOVED LATER ON -->
 <div>
   <div ng-show="srsViewState.userHasSrsFeature && srsViewState.srsApplicable">
     <div id="srs">
