INTYGFV-10855: Visa intygsid i footer för utkast och intygsvyerna

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -12,6 +12,7 @@
                 </div>
               </div>
             </div>
+            <intyg-footer></intyg-footer>
           </div>
         </wc-spinner><!-- entire intyg -->
       </div><!--  spinner end -->
