--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-footer/utkastFooter.html
@@ -6,7 +6,7 @@
       cert-form="certForm"></wc-utkast-footer-sign>
 
   <!-- Vårdadmin -->
-  <div wc-authority="!SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}">
+  <div class="vardadmin-footer" wc-authority="!SIGNERA_INTYG" intygstyp="{{::viewState.common.intyg.type}}">
     <!-- Vårdadmin kan notifiera via statusuppdatering för SMI-intyg -->
     <wc-utkast-footer-notify
         wc-authority="NOTIFIERING_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
@@ -18,6 +18,10 @@
         wc-authority="VIDAREBEFORDRA_UTKAST" intygstyp="{{::viewState.common.intyg.type}}"
         view-state="viewState"
         cert-form="certForm"></wc-utkast-footer-vidarebefordra>
+  </div>
+
+  <div class="intygs-id">
+    Intygs-ID: {{::intygId}}
   </div>
 
   <a id="bottom"></a>
