--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsQuestionaire.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsQuestionaire.directive.html
@@ -7,7 +7,7 @@
                 </div>
                 <div class="srs-question" ng-repeat="answer in question.answerOptions track by $index" for="{{answer}}">
                     <label class="radio-inline line">
-                        <input type="radio" ng-change="change()" name="answer{{$parent.$index}}{{id}}" ng-model="question.model" ng-value="answer" />
+                        <input type="radio" ng-disabled="srs.consent !== 'JA'" ng-change="change()" name="answer{{$parent.$index}}{{id}}" ng-model="question.model" ng-value="answer" />
                             {{answer.text}}
                     </label>
                 </div>
@@ -16,7 +16,7 @@
     
         <div class="srs-questions-submit">
             <button type="button" id="showBtn-a8722b69-ae4c-4d28-bdf4-9af526c29a44" class="floatRight btn btn-secondary ng-binding"
-                ng-click="visaClicked()" ng-disabled="!srs.showVisaKnapp"  popover-popup-delay="300" popover-append-to-body="true"
+                ng-click="visaClicked()" ng-disabled="!srs.showVisaKnapp || srs.consent !== 'JA'"  popover-popup-delay="300" popover-append-to-body="true"
                 popover-placement="auto top">
                     Beräkna patientens risk
             </button>
