--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -1,5 +1,9 @@
 <div ui-view="header" class="webcert-workarea-intyg-header"></div>
 <div class="webcert-workarea-wrapper">
+
+  <!-- page error message -->
+  <wc-error error="viewState.common.activeErrorMessageKey" ng-if="viewState.common.activeErrorMessageKey && viewState.common.doneLoading"></wc-error>
+
   <div class="webcert-workarea-hflex-container centered-constrained-content" id="view-{{viewState.common.intygProperties.type}}" ng-show="!viewState.common.activeErrorMessageKey">
     <div id="certificate-content-container" class="webcert-workarea-intyg container-fluid">
       <div class="{{viewState.common.intygProperties.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
